# requirement-insight-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
agents/: README.md  __init__.py  memory.py  models.py  population.py
api/: README.md  __init__.py  app.py  schemas.py
configs/: README.md
data/: README.md
docs/: README.md  architecture.md  beginner-guide.md  data-policy.md  evaluation.md  getting-started.md  roadmap.md  runbook.md  safety.md  schema-spec.md
evaluation/: README.md  __init__.py  calibration.py  metrics.py  models.py
examples/: README.md
ingestion/: README.md  __init__.py  loaders.py  metadata.py  models.py  normalizer.py  pipeline.py
prompts/: README.md
rag/: README.md  __init__.py  models.py
requirement_insight_agent/: __init__.py  __main__.py  cli.py  main.py  models.py  project.py  workflows.py
schemas/: README.md  agent.schema.json  datasource.schema.json  evaluation.schema.json  output.schema.json  scenario.schema.json
simulations/: README.md  __init__.py  aggregation.py  models.py  reporting.py  runner.py  scoring.py
tests/: README.md  test_aggregate_cli.py  test_aggregation.py  test_api.py  test_cli.py  test_demand_estimation.py  test_domain_models.py  test_estimate_demand_cli.py  test_evaluate_cli.py  test_evaluation.py  test_ingestion.py  test_models.py  test_population_builder.py  test_population_cli.py  test_provider_stack.py  test_rag_chunking.py  test_rag_retrieval.py  test_run_scenario_cli.py  test_runner_models.py  test_scenario_runner.py  test_smoke.py  (+2 more)
(+93 files in other folders)
