[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "requirement-insight-agent"
version = "0.1.0"
description = "Spec-first scaffolding for a requirement insight agent platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache License 2.0" }
authors = [
  { name = "Requirement Insight Agent Contributors" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
rag = [
  "faiss-cpu>=1.8,<2.0"
]
dev = [
  "httpx>=0.27,<1.0",
  "jsonschema>=4.23,<5.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0"
]

[project.scripts]
ria = "requirement_insight_agent.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]